resolved a simple ajustment in ul to make it centered align

--- a/css/architect.css
+++ b/css/architect.css
@@ -125,10 +125,14 @@ nav ul li a{
     }
     .display-flex{
         flex-direction: column;
+        align-content: center;
     }
     .banner-title{
         font-size: 2.8rem;
         font-weight: 800;
+    }
+    nav ul{
+        padding: 0;
     }
     nav ul li a{
         font-weight: 600;
